# multi-epoch

./: NOTES-creating-wcl.txt  NOTES-execute-steps.txt  README  install_prereqs.sh  me_pipe_conf_example.py  me_pipe_conf_template.py  setup.py
devel/branch/shapelets_ML/: README
devel/development/: INSTALL  Makefile  install-main_HG.sh  install-support_HG.sh  install.sh
devel/development/ImageProc/: DC0truth_convert.c  DECam_convert.c  Makefile  Makefile.old  Mosaic2_convert.c  QA_astrometry.c  SExcat_convert.c  SPT_ingest.c  USNOB_convert.c  ar_filterduplicates.c  ar_find.c  ar_remove.c  ar_removefile.c  archivesubs.c  archivesubsnew.c  ascii2ldac.c  astrometry.c  catalog_ingest.c  catsubs.c  check_PSM.c  check_hdu.c  check_keyword.c  check_remap.c  check_scamp.c  checklist.c  coadd_catalogingest.c  coadd_chi2detection.c  coadd_fluxscale.c  coadd_fmatch.c  coadd_grabmatches.c  coadd_grabmatches_catsim1.c  coadd_select.c  convert_ingest.c  copy_objects.c  correctRADEC.c  db_utils.c  editbpm.c  findtile.c  findtile_allccd.c  fitscombine.c  (+54 more)
devel/development/plplot-5.8.0-RC1/: bootstrap.sh.out  configure  configure.ac
devel/development/shapelets/: Makefile  TODO  configure
devel/development/terapix/scamp/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  scamp-mp.spec.in  scamp.spec.in
devel/development/terapix/scamp/man/: Makefile.in  scamp.1
devel/development/terapix/scamp/src/: Makefile.am  Makefile.in  astrefcat.c  astrefcat.h  astrsolve.c  catout.c  catout.h  cplot.c  cplot.h  define.h  fitswcs.c  fitswcs.h  header.c  main.c  makeit.c  photsolve.c  preflist.h  proper.c  samples.c  samples.h  xml.c
devel/development/terapix/scamp/src/fits/: Makefile.in
devel/development/terapix/scamp/src/wcs/: Makefile.in
devel/development/terapix/skymaker/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  skymaker-mp.spec.in  skymaker.spec.in
devel/development/terapix/skymaker/man/: Makefile.in  sky.1
devel/development/terapix/skymaker/src/: Makefile.in  define.h  galaxies.c  image.c  imaout.c  list.c  makeit.c  preflist.h  prefs.c  prefs.h  psf.c  simul.c  simul.h  stars.c
devel/development/terapix/skymaker/src/fits/: Makefile.in
devel/multiepoch/trunk/: NOTES-execute-steps.txt  install_prereqs.sh  me_pipe_conf_example.py  setup.py  timing.txt
devel/orchestration/ar_stuff/: ar_copy  ar_copy_dbi  ar_delete  ar_justify  ar_verify  archive.sql  get_files.sql  t.sql  update.sql
devel/orchestration/ogrescript/: bootstrap.properties  edit_BCS.properties  edit_DES.properties  edit_WS.properties  runelf  workflow_BCS.xml  workflow_DES.xml
devel/reduction/: README  edit_OSG.properties  edit_TG.properties  edit_TG.properties.template  edit_WS.properties  edit_WS.properties.template  makemans  process.sh  workflow_OSG.xml  workflow_TG.xml  workflow_WS.xml
devel/reduction/bin_TG/: DECam_convert  MOSAIC_convert  QA_astrometry  aclient  ar_filterduplicates  ar_find  ar_remove  ar_removefile  astrometry  catalog_ingest  check_PSM  check_hdu  check_remap  coadd_catalogingest  coadd_chi2detection  coadd_fluxscale  convert_ingest  findtile  findtile_allccd  fitscombine  fixfindtile.cmd  flatcombine  fwhm  getfitsfromlist  image_chi2  image_ingest  imcorrect  imsim1_convert  insert_head  makedirs  makeingestlist  makelist  mkbpm  mkillumcor  mosaictile  quick_coadd  runCatalog_ingest  runFitscombine  runSCAMP  runSExtractor  (+12 more)
devel/reduction/bin_WS/: DECam_convert  Mosaic2_convert  QA_astrometry  aclient  ar_filterduplicates  ar_find  ar_remove  ar_removefile  ascii2ldac  astrometry  binary2ascii  catalog_ingest  check_hdu  check_keyword  check_remap  check_scamp  checklist  coadd_catalogingest  coadd_chi2detection  coadd_fluxscale  coadd_grabmatches  coadd_test  coadd_zp  convert_ingest  copy_objects  find_overlapimg  findtile  findtile_allccd  fitscombine  flatcombine  fwhm  get_FWHM  get_ellipticity  get_skybrite  getfitsfromlist  getmoments  grabmatches  image_chi2  image_ingest  imcorrect  (+32 more)
devel/reduction/doc/: DESfile.example  desstat.pod  dessubmit.pod
devel/reduction/etc/: DECam.ahead  DECam.xtalk  MeasureStars.conf  Mosaic2.2005-09-00.fixim  Mosaic2.2006-04-10.xtalkWAB  Mosaic2.ahead  ar_find.sql  coadd_objects.ctr  convert_ingest.bad  default.psfex  default.scamp  default.sex  default.swarp  des.cfg  files.ctr  files_DECam_raw.ctr  files_Mosaic2_raw.ctr  objects.ctr  prepsfex.param  psmParam_r.par  sex.config  sex.param  sex.param_nopsfex  sex.param_psfex  sex.param_scamp  shapelet_objects.ctr  shapelet_psf.ctr
devel/reduction/libexec/: check_scamp  descheckanalysis  descheckconvert  descheckconvertmngr  descheckprocessmngr  descheckstagesrc  desingestraw  desingestsrc  deslaunchogre  desposttask  despreconvertmngr  despreogrelaunch  desprestagesrc  despretask  desstagesrc  deswrapper
devel/reduction/module_orchs/: makexml.xml  (+28 more)
etc/: 20151008_default.scamp.20140423  20160402_psfex.config  20160402_sex.config  20160402_stiff.conf  20160402_swarp.config  20160422_scamp.config  20160422_sex.config  20160609_ptif.config  20160609_sex.config  20160609_sex.param_nomodel  default.scamp.coadd  default.sex  default.swarp  sex.config  sex.param
example_pipes/: me_pipe_conf_template_custom_tile.py
example_queries/: default.sql  findccds_query_desoper.sql  findccds_query_desoper_materialize_join.sql  findccds_query_destest_materialize_join_minimal.sql  findccds_query_pwf_attempt_id.sql  query_scampcat_scamphead.sql
python/multiepoch/: __init__.py  coadd_MEF.py  coadd_merge.py  coaddlib.py  config_db-destest.py  contextDefs.py  descoords.py  destiling.py  file_handler.py  metools.py  output_handler.py  querylibs.py  tileinfo_utils.py  utils.py  zipper_interp.py
testing/: DES2246-4457_ccdinfo.assoc  DES2246-4457_tileinfo.json
ups/: multiepoch.table
wcl/: HowToRun.txt  custom_computesites.wcl  felipe_cfg.des
wcl/modulewcl/: 01-query_tileinfo.wcl  02-find_ccds_in_tile.wcl  04-call_swarp_customweights.wcl
wcl/submitwcl/: multiepoch.des  multiepoch_mojo_cmp4.des  multiepoch_singleblock_FM.des  uptime_dessub_FM.des
(+2346 files in other folders)
